# tdg-workshop

./: .gitignore  README.md  SUMMARY.md  handbook.md  kafka.conf  wrapup.md
docs/: reference-postman.md  reference-rust.md
module-01/: 01-section-01.md  01-section-02.md  01-section-03.md  01-section-04.md  README.md  section-ii-current-state-design.md  section-iii-privacy-design-strategies.md  section-v-test-data-platform.md
module-02/: 02-section-01.md  02-section-02.md  02-section-03.md  README.md
module-04/: 03-section-01-1.md  03-section-01-2.md  04-section-04.md  04-section-05.md  README.md  module-03.md  section-iv-starting-the-service.md
module-05/: 05-section-01.md  README.md  section-i-overview.md  section-ii-executable.md  section-iv-executable.md  section-iv-starting-the-service.md  section-v-service-testing.md
module-06/: 06-section-01.md  06-section-04.md  README.md  section-i-overview.md  section-iv-starting-the-service.md  section-v-adding-the-business-logic.md  section-vi-testing-the-service.md
module-ii-test-data-generation-design/: 01-section-04.md  README.md
module-v-building-a-provisioning-microservice/: README.md  seciton-iii-executable.md  section-i-overview.md  section-ii-manifest.md  section-iii.2-executable.md  section-iv-starting-the-service.md  section-vi-testing-the-service.md
rust-tdg/: Cargo.toml
rust-tdg/src/: lib.rs  tdg_service.rs
rust-tdg/tests/: web-service-tests.rs
setting-up-you-machines/: README.md  congratulations.md  creating-a-workstation.md  installing-tools.md  starting-kafka.md
workshop/: notes.txt
(+12 files in other folders)
